fix: header overflow added

--- a/blocks/performance/__name/performance__name.css
+++ b/blocks/performance/__name/performance__name.css
@@ -7,6 +7,16 @@
     letter-spacing: -0.01em;
     margin: 0 0 16px;
     padding: 0;
+    max-width: 269px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -moz-box;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    line-clamp: 2;
+    box-orient: vertical;
 }
 
 @media (max-width: 960px) {
